# algo

./: .gitignore  Makefile  algo_ticket.cpp  array.cpp  array.hpp  bits  external_sort.cpp  gen  generator.cpp  harry_potter.cpp  linear_sort.cpp  main.cpp  matrix.cpp  priotity_queue.cpp  read_file.cpp  sort  sort.hpp  test  test.cpp  test.sh
algebraic/: bench_test_fibo.sh  bench_test_pow.sh  bench_test_prime.sh  fib.cpp  is_primary.cpp  pow.cpp
bintree/: .golangci.yml  Makefile  bst.go  main.cpp
bintree/avl/: avl.go  avl_test.go
bintree/bst/: bst.go  bst_test.go
bintree/include/: bintree.hpp
bintree/treap/: treap.go  treap_test.go
graph/: dijkstra.go  dijkstra_test.go  graph.go  graph_test.go  mst.go  mst_test.go  ufd.go
hash/chain/: hash.go  hash_test.go
sort/: CMakeLists.txt
sort/include/: sort.hpp
sort/src/: external_sort.cpp  sort.cpp
sort/test/: test.cpp
strings/: alphabet.c  alphabet.h  main.c
strings/aho/: aho.c
strings/moore/: alphabet.c  alphabet.h  main.c
ticket/: compare.sh  string.cpp
